# acerola-android

./: .gitignore  CONTEXT.md  README.md  TODO.md  build.gradle.kts  build_error.txt  settings.gradle.kts
.claude/: settings.local.json
.claude/rules/: RULES.md
.github/workflows/: release.yml  tests.yml
.planning/phases/adhoc-manga-actions/: PLAN.md  SUMMARY.md
acerola/: .gitignore  CLAUDE.md  CONTEXT.md  TODO.md  build.gradle.kts  gradle.properties  package-lock.json  settings.gradle.kts
acerola/app/: .gitignore  build.gradle.kts  proguard-rules.pro
acerola/core/: build.gradle.kts
acerola/core/src/main/: AndroidManifest.xml
acerola/data/: build.gradle.kts
acerola/data/schema/br.acerola.comic.local.database.AcerolaDatabase/: 2.json
acerola/gradle/: libs.versions.toml
acerola/gradle/wrapper/: gradle-wrapper.properties
acerola/infra/: build.gradle.kts
acerola/native/: .gitignore  build.gradle.kts  makefile
acerola/native/rust/: Cargo.toml  uniffi.toml
acerola/native/rust/src/: api.rs  lib.rs
acerola/native/rust/src/lib/: mode.rs  singleton.rs
acerola/ui/: build.gradle.kts
acerola/ui/src/main/: AndroidManifest.xml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
data/: build.gradle.kts  proguard-rules.pro
data/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
infrastructure/: build.gradle.kts  proguard-rules.pro
presentation/: build.gradle.kts  proguard-rules.pro
presentation/src/main/: AndroidManifest.xml
(+1640 files in other folders)
